Annoying css bug causing the menues that overlap with the filters not to work

--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -909,7 +909,6 @@ a.proposal_link_red:hover {
 	position:relative;
 	left:10px;
 	bottom:-1px;
-	z-index:2;
 }
 
 .tabMenuFixed {
